# BibleRunner

./: .gitignore  CMakeLists.txt  README.md  biblerunner.cpp  biblerunner.h
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  biblerunner.cpp  biblerunner.h  biblerunner.json
src/data/: books.h  convert.js
